ingress/stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.api.infoviz.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microservice2
            port:
              number: 80
